--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="icon_color">#596088</color>
+    <color name="primary">#0082d4</color>
+    <color name="primary_on_click">#00b0f6</color>
+
+
 </resources>
